# TestRig

./: .gitignore  CMakeLists.txt  README.md  environment  main.cpp  makefile
DriverTests/: CMakeLists.txt
DriverTests/andor3/: tests.cc
andor3/: connection.cpp  tests.cc
barcode-reader/: requirements.txt
config/hardware-control-config/: bl99p-ea-det-01.yaml
config/saves/ANDOR/: ANDOR-DEFAULTS.json
control-automation/: webcam-snapshot.py
gda-api-client/src/ac/uk/diamond/gdaApi/client/: GdaConnection.java  GdaSshClient.java  SshClientFacade.java
gda-api-client/src/ac/uk/diamond/gdaApi/command/: Command.java  CommandOutputSupplier.java  CommandReader.java  CommandResultSupplier.java  CommandRunner.java  CommandWriter.java  ListNamesCommand.java  ListNamesCommandOutput.java  ListNamesCommandWriter.java
gda-api-client/src/ac/uk/diamond/gdaApi/commandIo/: CommandOutputReader.java  CommandOutputReceiver.java  CommandSender.java
gda-api-client/src/ac/uk/diamond/gdaApi/serialization/: DeserializationException.java  Deserializer.java  (+1 more)
gda-api-client/tests/ac/uk/diamond/gdaApi/: GdaApiTestSuite.java  SystemTest.java
mapping/p99/automation/: webcam.py
mapping/p99/hardware-tests/: malcolmtest.py  test_andordetector.py  test_areadetector.py
mapping/p99/ioc-tests/: cacommon.py  malcolmtest.py  process_variable.py  processvariable.py  test_detector01.py  test_detector_01.py  test_process_variable.py  test_processvariable.py
test-utils/hardware-tests/: test_exposure.py  test_imagemode.py  test_numimages.py
test-utils/hardware/areadetector/: test_acquire.py
testing/driver/: CMakeLists.txt  CMakeListsDls.txt
testing/driver/tests/: andor3.cc
testing/driver/tests/andor3/: andor3.cpp  andor3.h  binning.cpp  framerate.cpp  model.cpp
testing/driver/utilities/andor3/: camera.cpp  camera.hpp  connection.cpp  connection.hpp
testing/malcolm/tests/: bl99p-ea-det-01.yaml
testing/malcolm/utilities/: test_exposure.py
tests/hardware-tests/: malcolmtest.py  test_acquire.py  test_acquireperiod.py  test_andordetector.py  test_exposure.py  test_imagemode.py
tests/malcolm/: ANDOR-DEFAULTS.json  bl99p-ea-det-01.yaml  test_bl99p_ea_det_01.py
tests/test_hardware/: test_bl99p_ea_det_01.py
tests/utils/hardware/areadetector/: test_andordetector.py  test_imagemode.py
testutils/driver/: .gitignore
testutils/driver/andor3/: connection.cpp  connection.hpp
testutils/hardware/: malcolmtest.py
testutils/hardware/areadetector/: test_acquire.py  test_acquireperiod.py  test_andordetector.py  test_imageacquire.py  test_imagecapture.py
testutils/malcolm/: test_acquirereadout.py  test_andordetector.py  test_imageacquire.py  test_numimages.py  test_triggermode.py
(+64 files in other folders)
